--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,6 +1,6 @@
 name: android
 version: 2.2.0
-inherits: pjvds/java@0.1.3
+inherits: tomorrowkey/java@0.2.0
 type: main
 platform: ubuntu@12.04
 description: A box created for Android development with Gradle 2.2.1
